--- a/medlem.html
+++ b/medlem.html
@@ -17,11 +17,41 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/custom2.css" />
 
 </head>
 
 <body>
-    <h2> HEI </h2>
+ 
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <p id="category">Tilbake til magasinet</p>
+
+                        <div style="background-image: url('img/02.jpg');" class="left-img"></div>
+                        <div style="background-image: url('img/02.jpg');" class="left-img"></div>
+
+            </div>
+            <div class="col-sm-6">
+                <p id="category">Dybdeartikkel</p>
+                <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
+                <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p> 
+
+                <p id="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu dui pretium, auctor eros id, luctus diam. Sed risus mi, faucibus ullamcorper mollis in, iaculis iaculis eros. Nulla facilisi. Nunc ultricies dui pretium, hendrerit metus ac, facilisis neque. Vestibulum eget egestas quam. Nunc sed eros pharetra, venenatis libero eget, consequat justo. Donec mattis eros orci. Nullam vestibulum volutpat lorem, sed fringilla risus blandit eget. Pellentesque maximus commodo nisi maximus tristique. Vivamus id augue leo. Pellentesque finibus sagittis tempor. Nam eu dapibus lorem. Morbi vitae dui sodales urna condimentum gravida quis quis augue.</p>
+            
+                <button type="button" class="bliMedlem">Bli medlem</button>
+
+                <p id="txt1">Donec mattis eros orci</p>
+
+                <p id="txt2">Sed sit amet nibh a ante efficitur aliquet id sit amet erat. Donec arcu purus, lacinia ut tristique sit amet, tempus ac neque. Duis magna dui, posuere quis commodo ac, ornare ut neque. Aliquam magna nisi, cursus vel quam id, tincidunt faucibus arcu. Vestibulum sed ante viverra, venenatis ex eget, rhoncus urna. Nulla rhoncus mauris feugiat tincidunt mattis. Curabitur egestas ac mauris at bibendum.</p>
+
+                <p id="txt2">Sed ac mollis leo, et blandit nunc. Duis sed lacus sit amet eros placerat finibus gravida vel ipsum. Maecenas in scelerisque tortor. Cras urna felis, elementum vitae suscipit vitae, egestas sit amet nibh. In accumsan lacus nisl, et commodo metus elementum eu. Proin pharetra dolor eget elit semper, vitae eleifend lacus pulvinar. Quisque volutpat eros vitae erat imperdiet, at lobortis arcu molestie. Proin magna purus, mattis ut sollicitudin at, tincidunt ut justo. Fusce tincidunt efficitur neque, sit amet consectetur nulla laoreet eu. Duis fringilla erat dapibus ligula sagittis dapibus. Suspendisse id semper enim, ut bibendum neque. Etiam iaculis justo id felis luctus sollicitudin. Morbi ut ligula eleifend, fringilla purus id, iaculis arcu. Nunc ut nisl vitae massa dictum vehicula. Ut egestas tellus id diam consectetur.</p>
+
+
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
