--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div style="background-image: url('img/04.jpg');" class="res-img"></div>
                     </div>
                     <div class="col-sm-6 col-xs-12 magText">
-                        <p id="category"><u> Tema - Det nye arbeidslivet - 1/4 </u></p>
+                        <p id="topCategory"><u> Tema - Det nye arbeidslivet - 1/4 </u></p>
                         <h2 id="title"> SAMFUNNSENDRINGER OG ARBEIDSLIV </h2>
                         <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                         <button type="button" class="sfButton">LES MER</button>
