--- a/medlem.html
+++ b/medlem.html
@@ -22,22 +22,53 @@
 </head>
 
 <body>
+
+<nav class="navbar navbar-light">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <ul class="nav navbar-nav navbar-left">
+        <li id="siteName"> <a href="#">SAMFUNNSVITEREN</a></li>
+        <li id="releaseNum"> <a href="#">1 - 2017</a></li>
+      </ul>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li id="tidUtg"> <a href="#">Tidligere Utgivelser</a></li>
+        <li id="bliMedlem"> <a href="medlem.html">Bli medlem </a></li>
+        <li id="linkSam"> <a href="#">Samfunnsviterne.no </a></li>
+        <li> <img src="img/logo-01.png" style="height : 50px;"></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+
  
-    <div class="container">
+    <div class="container col-space">
         <div class="row">
             <div class="col-sm-6">
                 <p id="category">Tilbake til magasinet</p>
 
-                        <div style="background-image: url('img/02.jpg');" class="left-img"></div>
-                        <div style="background-image: url('img/02.jpg');" class="left-img"></div>
+                    <div style="background-image: url('img/02.jpg');" class="left-img"></div>
+                    <div style="background-image: url('img/02.jpg');" class="left-img"></div>
 
             </div>
             <div class="col-sm-6">
                 <p id="category">Dybdeartikkel</p>
-                <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
-                <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p> 
+                <h2 id="title"> OM SAMFUNNSVITEREN </h2>
+                <p id="content">Samfunnsviternes medlemmer skal ha det bra på sin arbeidsplass – de skal vite at de alltid har noen «i ryggen», som støtter og gir råd. Medlemmene skal være trygge på at vi er en pådriver for deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivå og for å fremme deres økonomiske interesser og faglige kompetanse.</p> 
 
-                <p id="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu dui pretium, auctor eros id, luctus diam. Sed risus mi, faucibus ullamcorper mollis in, iaculis iaculis eros. Nulla facilisi. Nunc ultricies dui pretium, hendrerit metus ac, facilisis neque. Vestibulum eget egestas quam. Nunc sed eros pharetra, venenatis libero eget, consequat justo. Donec mattis eros orci. Nullam vestibulum volutpat lorem, sed fringilla risus blandit eget. Pellentesque maximus commodo nisi maximus tristique. Vivamus id augue leo. Pellentesque finibus sagittis tempor. Nam eu dapibus lorem. Morbi vitae dui sodales urna condimentum gravida quis quis augue.</p>
+                <p id="txt3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu dui pretium, auctor eros id, luctus diam. Sed risus mi, faucibus ullamcorper mollis in, iaculis iaculis eros. Nulla facilisi. Nunc ultricies dui pretium, hendrerit metus ac, facilisis neque. Vestibulum eget egestas quam. Nunc sed eros pharetra, venenatis libero eget, consequat justo. Donec mattis eros orci. Nullam vestibulum volutpat lorem, sed fringilla risus blandit eget. Pellentesque maximus commodo nisi maximus tristique. Vivamus id augue leo. Pellentesque finibus sagittis tempor. Nam eu dapibus lorem. Morbi vitae dui sodales urna condimentum gravida quis quis augue.</p>
             
                 <button type="button" class="bliMedlem">Bli medlem</button>
 
