Big upd. front, kategori and medlem page. CSS

--- a/kategori.html
+++ b/kategori.html
@@ -23,29 +23,39 @@
 
 <body>
  
+     <!-- CATEGORY "UNG" -->
     <div class="container">
         <div class="row">
             <div class="col-sm-12 showCat">
-                <h2 id="catHeader">UNG</h2>
+                <h2 id="catHeader">Ung</h2>
             </div>
         </div>
     </div>
 
-
-    <!-- ARTIKLER -->
+    <!-- CONTAINER - ARTICLE -->
 <div class="container">
     <div class="row">
-        <!-- DYBDE (MED BILDE) ARTIKKEL -->
-        <div class="col-sm-12 col-md-6">
+
+    <!-- ARTICLE WITH IMG -->
+        <div class="col-sm-12 col-md-6 singleArt">
             <div class="row">
-                <div class="col-sm-12">
-                    <p id="category">Dybde</p>
-                    <h4 id="heading">Samfunnsendringer og arbeidsliv</h4>
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">1 - 2017</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Samfunsendringer og arbeidsliv</h4>
+                    </div>
                 </div>
+
             </div>
 
             <div class="row">
-                <div class="col-sm-12 prevArt artGrey">
+                <div class="col-sm-12 prevArt artYellow">
                     <div style="background-image: url('img/01.jpg');" class="col-sm-6 img-artikkel">
                     </div>
                     <div class="col-sm-6">
@@ -60,18 +70,27 @@
             </div>
         </div>
 
-        <!-- REDAKTØREN HAR ORDET ARTIKKEL -->
-        <div class="col-sm-6 col-md-3">
+    <!-- ARTICLE WITHOUT IMG -->
+        <div class="col-sm-6 col-md-3 singleArt">
             <div class="row">
-                <div class="col-sm-12">
-                    <p id="category">Redaktøren har ordet</p>
-                    <h4 id="heading">Redaktøren har ordet Redaktøren har ordet</h4>
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">2 - 2016</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Redaktøren har ordet</h4>
+                    </div>
                 </div>
+
             </div>
 
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="prevArt artGreen">
+                    <div class="prevArt artYellow">
                         <div class="text-artikkel">
                             <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                             <button type="button" class="button-les">LES</button>
@@ -81,7 +100,322 @@
             </div>
         </div>
 
+    <!-- ARTICLE WITHOUT IMG -->
+        <div class="col-sm-6 col-md-3 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">3 - 2016</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">UDI´s bratte læringskurve</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="prevArt artYellow">
+                        <div class="text-artikkel">
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <button type="button" class="button-les">LES</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <!-- ARTICLE WITHOUT IMG -->
+        <div class="col-sm-6 col-md-3 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">1 - 2017</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Bruk av IKT gir bedre læring</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="prevArt artYellow">
+                        <div class="text-artikkel">
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <button type="button" class="button-les">LES</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <!-- ARTICLE WITH IMG -->
+        <div class="col-sm-12 col-md-6 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">3 - 2015</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Fremtidens teknologi og en nytt arbeidsliv</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12 prevArt artYellow">
+                    <div style="background-image: url('img/05.jpg');" class="col-sm-6 img-artikkel">
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-sm-12 text-artikkel">
+                                <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                                <button type="button" class="button-les">LES</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <!-- ARTICLE WITHOUT IMG -->
+        <div class="col-sm-6 col-md-3 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">3 - 2016</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Tar skrivende roboter over journalistjobber?</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="prevArt artYellow">
+                        <div class="text-artikkel">
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <button type="button" class="button-les">LES</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+
+    <!-- ARTICLE WITHOUT IMG -->
+        <div class="col-sm-6 col-md-3 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">1 - 2017</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Hallo, Samfunnsviter</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="prevArt artYellow">
+                        <div class="text-artikkel">
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <button type="button" class="button-les">LES</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+
+    <!-- ARTICLE WITHOUT IMG -->
+        <div class="col-sm-6 col-md-3 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">1 - 2017</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Internett som demokratibygger</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="prevArt artYellow">
+                        <div class="text-artikkel">
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <button type="button" class="button-les">LES</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>        
+
+    <!-- ARTICLE WITH IMG -->
+        <div class="col-sm-12 col-md-6 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">1 - 2017</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Ingen kan trylle frem arbeidsplasser</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12 prevArt artYellow">
+                    <div style="background-image: url('img/01.jpg');" class="col-sm-6 img-artikkel">
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-sm-12 text-artikkel">
+                                <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                                <button type="button" class="button-les">LES</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <!-- ARTICLE WITHOUT IMG -->
+        <div class="col-sm-6 col-md-3 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">1 - 2017</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">En god hjelper dersom man er langtidsyk</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="prevArt artYellow">
+                        <div class="text-artikkel">
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <button type="button" class="button-les">LES</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>  
+
+    <!-- ARTICLE WITH IMG -->
+        <div class="col-sm-12 col-md-6 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Ung</p> </li>
+                                <li> <p id="releaseDate">1 - 2017</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Om konkurranse, fagforeninger, skatt og ledelse</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12 prevArt artYellow">
+                    <div style="background-image: url('img/01.jpg');" class="col-sm-6 img-artikkel">
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-sm-12 text-artikkel">
+                                <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                                <button type="button" class="button-les">LES</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <!-- MODUL 2 -->
+        <div class="col-sm-6 col-md-3 singleArt">
+            <div class="row">
+
+                <div class="col-sm-12 topSection">
+                    <div class="topSectionText">
+                        <div class="catDate">
+                            <ul>
+                                <li> <p id="category">Samfunnsviterne.no</p> </li>
+                                <li> <p id="releaseDate">1 - 2017</p> </li>
+                            </ul>
+                        </div>  
+                        <h4 id="heading">Modul 2 - Kurs i arbeidsrett 1</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="prevArt artPurple">
+                        <div class="text-artikkel">
+                            <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
+                            <button type="button" class="sfButton">GÅ TIL KURSSIDEN</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+
+
+    </div>
+</div>
+    <!-- END CONTAINER - ARTICLE -->
 
 </body>
-
 </html>
