Home, should be responsive.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Main Custom Stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/custom2.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/768px.css" />
 
 </head>
 
@@ -58,11 +59,11 @@
         <div class="row">
             <div class="col-sm-12 magFront">
                 <div class="row">
-                    <div class="col-sm-6 hidden-xs magImg">
+                    <div class="col-sm-12 col-md-6  magImg">
                         <div style="background-image: url('img/04.jpg');" class="res-img"></div>
                     </div>
-                    <div class="col-sm-6 col-xs-12 magText">
-                        <p id="topCategory"><u> Tema - Det nye arbeidslivet - 1/4 </u></p>
+                    <div class="col-sm-12 col-md-6 magText">
+                        <p id="topCategory"> Tema - Det nye arbeidslivet - 1/4 </p>
                         <h2 id="title"> SAMFUNNSENDRINGER OG ARBEIDSLIV </h2>
                         <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                         <button type="button" class="sfButton">LES MER</button>
@@ -79,13 +80,13 @@
         <div class="row"> 
             <div class="col-sm-12 hovedArt">
                 <div class="row">
-                    <div class="col-sm-6 hovedArtText">
+                    <div class="col-sm-12 col-md-12 col-lg-6 hovedArtText">
                         <p id="category"> Dybdeartikkel </p>
                         <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
                         <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
                         <button type="button" class="sfButton2">LES ARTIKKELEN</button>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
                         <img src="img/02.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -125,7 +126,7 @@
     <div class="row">
         
     <!-- ARTICLE WITH IMG -->
-        <div class="col-sm-12 col-md-6 singleArt">
+        <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -159,7 +160,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -189,7 +190,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -219,7 +220,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -249,7 +250,7 @@
         </div>
 
     <!-- ARTICLE WITH IMG -->
-        <div class="col-sm-12 col-md-6 singleArt">
+        <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -283,7 +284,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -319,10 +320,10 @@
 <div class="container col-space">
     <div class="row">
         <div class="col-sm-12">
-            <div class="col-sm-6 fremhevet">
+            <div class="col-sm-12 col-md-12 col-lg-6 fremhevet">
                 <img src="img/06.jpg" class="img-responsive">
             </div>
-            <div class="col-sm-6 fremhevetText">
+            <div class="col-sm-12 col-md-12 col-lg-6 fremhevetText">
                 <p id="category"> Dybde </p>
                 <h2 id="title"> FREMHEVET ARTIKKEL</h2>
                 <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
@@ -336,18 +337,18 @@
     <!-- SAMFUNNSVITERNE - MODUL -->
 <div class="container col-space">
     <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <div class="samfunnsviterne">
 
                     <img src="img/svt-logo.png" class="img-responsive">
                     <p id="header"> Vi viser vei for våre medlemmer</p>
                     <p id="content"> Er du en samfunnsviter eller humanist med utdanning på masterniå, så hører du hjemme hos oss! Våre medlemmer skal være trygge på at vi er en pådriver fpr deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivåer og for æ fremme deres økonomiske interesser og faglige kompetanse.</p>  
-                    <button type="button" class="sfButton2">LES MER PÅ SAMFUNNSVITEREN.NO</button>
+                    <button type="button" class="sfButton4">LES MER PÅ SAMFUNNSVITEREN.NO</button>
 
                 </div>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <div class="samfunnsviterneFordeler">
 
                     <li> <img src="img/svt-ikon-wht-01.png" > <h4 id="singleFordel">Medlemskap <span class="glyphicon glyphicon-arrow-right"> </h4> </li>
@@ -367,7 +368,7 @@
     <div class="row">
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -397,7 +398,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -427,7 +428,7 @@
         </div>
 
     <!-- ARTICLE WITH IMG -->
-        <div class="col-sm-12 col-md-6 singleArt">
+        <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -461,7 +462,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -491,7 +492,7 @@
         </div>
 
     <!-- ARTICLE WITH IMG -->
-        <div class="col-sm-12 col-md-6 singleArt">
+        <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -525,7 +526,7 @@
         </div>
 
     <!-- MODUL 2 -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -547,7 +548,7 @@
                     <div class="prevArt artPurple">
                         <div class="text-artikkel">
                             <p id="content">Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
-                            <button type="button" class="sfButton">GÅ TIL KURSSIDEN</button>
+                            <button type="button" class="sfButton3">GÅ TIL KURSSIDEN</button>
                         </div>
                     </div>
                 </div>
