added viewport  - mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <meta charset="UTF-8">
     <!-- FONTS -->
     <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6823174/6134172/css/fonts.css" />
