--- a/medlem.html
+++ b/medlem.html
@@ -3,6 +3,8 @@
 
 <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta charset="UTF-8">
     <!-- FONTS -->
     <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6823174/6134172/css/fonts.css" />
@@ -25,14 +27,14 @@
  
     <div class="container col-space">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <p id="category">Tilbake til magasinet</p>
 
                     <div style="background-image: url('img/02.jpg');" class="left-img"></div>
                     <div style="background-image: url('img/02.jpg');" class="left-img"></div>
 
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <p id="category">Dybdeartikkel</p>
                 <h2 id="title"> OM SAMFUNNSVITEREN </h2>
                 <p id="content">Samfunnsviternes medlemmer skal ha det bra på sin arbeidsplass – de skal vite at de alltid har noen «i ryggen», som støtter og gir råd. Medlemmene skal være trygge på at vi er en pådriver for deres lønns- og arbeidsbetingelser - at vi aktivt jobber for å heve deres lønnsnivå og for å fremme deres økonomiske interesser og faglige kompetanse.</p> 
