--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <ul class="nav navbar-nav navbar-left">
-        <li id="siteName"> <a href="#">SAMFUNNSVITEREN</a></li>
-        <li id="releaseNum"> <a href="#">1 - 2017</a></li>
-      </ul>
+      <a class="navbar-brand " href="#"> <span id="siteName"> SAMFUNNSVITEREN </span> </a>
+      <a class="navbar-brand " href="#"> <span id="releaseNum"> 1 - 2017 </span> </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -617,6 +615,7 @@
             </div>                
         </div>
     </div>
+</div>
 
 
 <!-- Latest compiled and minified JavaScript -->
