--- a/kategori.html
+++ b/kategori.html
@@ -39,7 +39,7 @@
     <div class="row">
 
     <!-- ARTICLE WITH IMG -->
-        <div class="col-sm-12 col-md-6 singleArt">
+        <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -73,7 +73,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -103,7 +103,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -133,7 +133,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -163,7 +163,7 @@
         </div>
 
     <!-- ARTICLE WITH IMG -->
-        <div class="col-sm-12 col-md-6 singleArt">
+        <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -197,7 +197,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -227,7 +227,7 @@
         </div> 
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -257,7 +257,7 @@
         </div> 
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -287,7 +287,7 @@
         </div>        
 
     <!-- ARTICLE WITH IMG -->
-        <div class="col-sm-12 col-md-6 singleArt">
+        <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -321,7 +321,7 @@
         </div>
 
     <!-- ARTICLE WITHOUT IMG -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -351,7 +351,7 @@
         </div>  
 
     <!-- ARTICLE WITH IMG -->
-        <div class="col-sm-12 col-md-6 singleArt">
+        <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -385,7 +385,7 @@
         </div>
 
     <!-- MODUL 2 -->
-        <div class="col-sm-6 col-md-3 singleArt">
+        <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
             <div class="row">
 
                 <div class="col-sm-12 topSection">
@@ -418,6 +418,54 @@
     </div>
 </div>
     <!-- END CONTAINER - ARTICLE -->
+
+    <!-- FOOTER -->
+<div class="fullw-db"> 
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 footer">
+                <div class="row">         
+
+                    <div class="col-sm-4">
+                        <h3>Hold deg oppdatert</h3>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Din e-post">
+                                <span class="input-group-btn">
+                                    <button class="btn" type="button">SEND</button>
+                                </span>
+                            </div><!-- /input-group -->
+                    </div>
+
+                    <div class="col-sm-4">
+                        <h3>Kontakt oss</h2>
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <p id="phone">Telefon</p>
+                                <p id="mail">E-post</p>
+                            </div>
+                            <div class="col-xs-8">
+                                <p id="phoneNr">12 34 56 78</p>
+                                <p id="mailText">post@samfunnsviterne.no</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <img src="img/svt-logo-wht.png" class="img-responsive">
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 copyright">
+                        <p id="copyrightText">&copy; 2017 Samfunnsviterne</p>
+                    </div>
+                </div>
+
+            </div>                
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
