bigarticles and issue slider

--- a/bigarticle.html
+++ b/bigarticle.html
@@ -47,8 +47,8 @@
                 </div>
 
             </div>
-        </div>
     </div>
+</div>
 
     <div class="container">
         <div class="row">
@@ -73,7 +73,7 @@
             </div>   
 
         <!-- ARTICLE WITH IMG -->
-            <div class="col-sm-12 col-md-6 singleArt">
+            <div class="col-sm-12 col-md-12 col-lg-6 singleArt">
                 <div class="row">
 
                     <div class="col-sm-12 topSection">
@@ -107,7 +107,7 @@
             </div>
 
         <!-- ARTICLE WITHOUT IMG -->
-            <div class="col-sm-6 col-md-3 singleArt">
+            <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
                 <div class="row">
 
                     <div class="col-sm-12 topSection">
@@ -137,7 +137,7 @@
             </div>
 
         <!-- ARTICLE WITHOUT IMG -->
-            <div class="col-sm-6 col-md-3 singleArt">
+            <div class="col-sm-6 col-md-6 col-lg-3 singleArt">
                 <div class="row">
 
                     <div class="col-sm-12 topSection">
@@ -171,9 +171,109 @@
     </div>
 </div>
 
-
+<!-- Comment field MODUL - -->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-6"></div>
+        <div class="col-sm-12 col-md-6">
+            <div class="commentBox">
+                <h3 id="commentTitle">Skriv en kommentar til redaksjonen</h3>
+                    <div class="form-group">
+                        <!--<label for="comment">Comment:</label>-->
+                        <textarea class="form-control" rows="5" id="comment"></textarea>
+                    </div>
+                    <button type="button" class="sfButton2">SEND</button>
+                    
+            </div>
+        </div>
+    </div>
 </div>
 
+
+    <!-- FOOTER -->
+<div class="fullw-db"> 
+    <div class="container">
+        <div class="row">
+
+            <div class="issue-wrapper">
+                <div class="issue issue1">
+
+                    <div class="hovedArtText magText">
+                        <p id="category"> Dybdeartikkel </p>
+                        <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
+                        <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+                        <button type="button" class="sfButton">LES ARTIKKELEN</button>
+                    </div>
+
+                </div>
+
+                <div class="issue issue2">
+
+                    <div class="hovedArtText magText">
+                        <p id="category"> Dybdeartikkel </p>
+                        <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
+                        <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+                        <button type="button" class="sfButton">LES ARTIKKELEN</button>
+                    </div>
+
+                </div>
+
+                <div class="issue issue3">
+
+                    <div class="hovedArtText magText">
+                        <p id="category"> Dybdeartikkel </p>
+                        <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
+                        <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+                        <button type="button" class="sfButton">LES ARTIKKELEN</button>
+                    </div>
+
+                </div>
+
+            </div>            
+
+
+            <div class="col-sm-12 footer">
+                <div class="row">         
+
+                    <div class="col-sm-4">
+                        <h3>Hold deg oppdatert</h3>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Din e-post">
+                                <span class="input-group-btn">
+                                    <button class="btn" type="button">SEND</button>
+                                </span>
+                            </div><!-- /input-group -->
+                    </div>
+
+                    <div class="col-sm-4">
+                        <h3>Kontakt oss</h2>
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <p id="phone">Telefon</p>
+                                <p id="mail">E-post</p>
+                            </div>
+                            <div class="col-xs-8">
+                                <p id="phoneNr">12 34 56 78</p>
+                                <p id="mailText">post@samfunnsviterne.no</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <img src="img/svt-logo-wht.png" class="img-responsive">
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 copyright">
+                        <p id="copyrightText">&copy; 2017 Samfunnsviterne</p>
+                    </div>
+                </div>
+
+            </div>                
+        </div>
+    </div>
+</div>
 
 </body>
 
