--- a/medlem.html
+++ b/medlem.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <meta charset="UTF-8">
     <!-- FONTS -->
     <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6823174/6134172/css/fonts.css" />
@@ -12,19 +12,50 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+    <!-- Main Custom Stylesheet -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/custom2.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/768px.css" />
 
 </head>
 
 <body>
  
+    <!-- ============= Navbar ================ -->
+    <nav class="navbar navbar-transparent">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand " href="#"> <span id="siteName"> SAMFUNNSVITEREN </span> </a>
+            <a class="navbar-brand " href="#"> <span id="releaseNum"> 1 - 2017 </span> </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li id="tidUtg"> <a href="#"> <img src="img/nav/search-black.png"> Søk</a></li>
+                <li id="tidUtg"> <a href="#">Tidligere Utgivelser <img src="img/nav/pluss-black.png"> </a></li>
+                <li id="bliMedlem"> <a href="medlem.html">Bli medlem <img src="img/nav/jall-black.png"> </a></li>
+                <li id="linkSam"> <a href="#">Samfunnsviterne.no <img src="img/nav/arrow-black.png"> </a></li>
+                <li> <img src="img/logo-black.png" style="height : 50px;"></li>
+            </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+
+
+
+
     <div class="container col-space">
         <div class="row">
             <div class="col-sm-12 col-md-6">
@@ -50,6 +81,96 @@
                 <p id="txt2">Sed ac mollis leo, et blandit nunc. Duis sed lacus sit amet eros placerat finibus gravida vel ipsum. Maecenas in scelerisque tortor. Cras urna felis, elementum vitae suscipit vitae, egestas sit amet nibh. In accumsan lacus nisl, et commodo metus elementum eu. Proin pharetra dolor eget elit semper, vitae eleifend lacus pulvinar. Quisque volutpat eros vitae erat imperdiet, at lobortis arcu molestie. Proin magna purus, mattis ut sollicitudin at, tincidunt ut justo. Fusce tincidunt efficitur neque, sit amet consectetur nulla laoreet eu. Duis fringilla erat dapibus ligula sagittis dapibus. Suspendisse id semper enim, ut bibendum neque. Etiam iaculis justo id felis luctus sollicitudin. Morbi ut ligula eleifend, fringilla purus id, iaculis arcu. Nunc ut nisl vitae massa dictum vehicula. Ut egestas tellus id diam consectetur.</p>
 
 
+            </div>
+        </div>
+    </div>
+
+
+    <!-- ============= Footer ================ -->
+    <div class="fullw-footer"> 
+        <div class="container">
+            <div class="row">
+
+                <div class="issue-wrapper">
+                    <div class="issue issue1">
+
+                        <div class="hovedArtText issue-text">
+                            <p id="category"> Dybdeartikkel </p>
+                            <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
+                            <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+                            <button type="button" class="sfButton">LES MER</button>
+                        </div>
+
+                    </div>
+
+                    <div class="issue issue2">
+
+                        <div class="hovedArtText issue-text">
+                            <p id="category"> Dybdeartikkel </p>
+                            <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
+                            <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+                            <button type="button" class="sfButton">LES MER</button>
+                        </div>
+
+                    </div>
+
+                    <div class="issue issue3">
+
+                        <div class="hovedArtText issue-text">
+                            <p id="category"> Dybdeartikkel </p>
+                            <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
+                            <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
+                            <button type="button" class="sfButton">LES MER</button>
+                        </div>
+
+                    </div>
+
+                </div>            
+
+
+                <div class="col-sm-12 footer">
+                    <div class="row">         
+
+                        <div class="col-sm-12 col-md-3">
+                            <h3>Hold deg oppdatert</h3>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Din e-post">
+                                    <span class="input-group-btn">
+                                        <button class="btn" type="button">SEND</button>
+                                    </span>
+                                </div><!-- /input-group -->
+                        </div>
+
+                        <div class="col-md-1"></div>
+
+                        <div class="col-sm-12 col-md-3">
+                            <h3>Kontakt oss</h2>
+                            <div class="row">
+                                <div class="col-xs-3 col-sm-2 col-md-4">
+                                    <p id="phone">Telefon</p>
+                                    <p id="mail">E-post</p>
+                                </div>
+                                <div class="col-xs-9 col-sm-8 col-md-6">
+                                    <p id="phoneNr">12 34 56 78</p>
+                                    <p id="mailText">post@samfunnsviterne.no</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-1"></div>
+
+                        <div class="col-sm-12 col-md-3">
+                            <img src="img/svt-logo-wht.png" class="img-responsive">
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 copyright">
+                            <p id="copyrightText">&copy; 2017 Samfunnsviterne</p>
+                        </div>
+                    </div>
+
+                </div>                
             </div>
         </div>
     </div>
