--- a/bigarticle.html
+++ b/bigarticle.html
@@ -27,7 +27,7 @@
 <body>
 
     <!-- ============= Navbar ================ -->
-    <nav class="navbar navbar-blue">
+    <nav class="navbar navbar-custom">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
